# Lab9

./: .gitignore  PROMPT_LOG.md  README.md  go.mod
zad1/: client.py  server.go  test_client.py
zad2/: server.go  test_server.py
zad3/: Cargo.toml  test_struct.py
zad3/src/: lib.rs
zad4/: Cargo.toml  benchmark.py  server.go  test_benchmark.py
zad4/src/: lib.rs
zad5/: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
zad5/.github/workflows/: ci-cd.yml
zad5/src/: lib.rs
zad5/tests/: test_module.py
