[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rust-python-struct"
version = "0.1.0"
description = "A Rust-powered Python extension with Person struct"
authors = [
    {name = "Cokops", email = "gerasev-z@mail.ru"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/yourusername/Laba9"
Repository = "https://github.com/yourusername/Laba9"

[tool.maturin]
features = ["pyo3/extension-module"]